@@ -4,10 +4,11 @@ import "github.com/elastic/beats/libbeat/common/match"
 
 // Contains available prospector types
 const (
-	LogType   = "log"
-	StdinType = "stdin"
-	RedisType = "redis"
-	UdpType   = "udp"
+	LogType    = "log"
+	StdinType  = "stdin"
+	RedisType  = "redis"
+	UdpType    = "udp"
+	DockerType = "docker"
 )
 
 // MatchAny checks if the text matches any of the regular expressions
