@@ -8,6 +8,7 @@ package include
 
 import (
 	// This list is automatically generated by `make imports`
+	_ "github.com/elastic/beats/filebeat/prospector/docker"
 	_ "github.com/elastic/beats/filebeat/prospector/log"
 	_ "github.com/elastic/beats/filebeat/prospector/redis"
 	_ "github.com/elastic/beats/filebeat/prospector/stdin"
